5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1664_2966.log
== TEST (2019-04-16 11:30:03) 
-- CODE:
mulher = input("É mujlher ou não é?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = valor_ingresso - 20**
else:
	print (valor_ingresso)
-- ERROR:
File "XXXX", line 7
    ingresso = valor_ingresso - 20**
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:16) 
-- CODE:
mulher = input("É mujlher ou não é?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = valor_ingresso - 20**
else:
	print (valor_ingresso)
	
print(ingresso)
-- ERROR:
File "XXXX", line 7
    ingresso = valor_ingresso - 20**
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:38) 
-- CODE:
mulher = input("É mujlher ou não é?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = valor_ingresso - 20**valor_ingresso
else:
	print (valor_ingresso)
	
print(ingresso)
-- OUTPUT:
-6.146456854396455e+48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:07) 
-- CODE:
mulher = input("E mujlher ou não e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = valor_ingresso - 20**valor_ingresso
else:
	print (valor_ingresso)
	
print(ingresso)
-- OUTPUT:
-6.146456854396455e+48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:21) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = valor_ingresso - 20**valor_ingresso
else:
	print (valor_ingresso)
	
print(ingresso)
-- OUTPUT:
-6.146456854396455e+48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:50) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = valor_ingresso - 20%valor_ingresso
else:
	print (valor_ingresso)
	
print(ingresso)
-- OUTPUT:
17.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:32) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso - 20%valor_ingresso) * (quantidade_ingresso)
else:
	print (valor_ingresso)
	
print(ingresso)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ingresso = (valor_ingresso - 20%valor_ingresso) * (quantidade_ingresso)
NameError: name 'quantidade_ingresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:33:34) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quatidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - 20%valor_ingresso
else:
	print (valor_ingresso)
	
print(ingresso)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ingresso = (valor_ingresso * quantidade_ingresso) - 20%valor_ingresso
NameError: name 'quantidade_ingresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:34:01) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - 20%valor_ingresso
else:
	print (valor_ingresso)
	
print(ingresso)
-- OUTPUT:
205.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:42) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - 20%valor_ingresso
else:
	print (valor_ingresso)
	
print(round(ingresso, 2)
-- ERROR:
File "XXXX", line 12
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:49) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - 20%valor_ingresso
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
205.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:39:17) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))

desconto = 20% valor do desconto

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - 
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- ERROR:
File "XXXX", line 5
    desconto = 20% valor do desconto
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:39:38) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))

desconto = valor_ingresso - 20% valor do desconto

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - 
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- ERROR:
File "XXXX", line 5
    desconto = valor_ingresso - 20% valor do desconto
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:39:48) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))

desconto = valor_ingresso - 20% valor do desconto

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - desconto
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- ERROR:
File "XXXX", line 5
    desconto = valor_ingresso - 20% valor do desconto
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:40:05) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))

desconto = valor_ingresso - 20% valor_ingresso

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - desconto
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
207.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:40:32) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))

desconto = valor_ingresso - 20% valor_ingresso
print desconto

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - desconto
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- ERROR:
File "XXXX", line 6
    print desconto
                 ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(desconto)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:40:41) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))

desconto = valor_ingresso - 20% valor_ingresso
print (desconto)

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - desconto
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
17.5
207.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:45:22) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))

desconto = valor_ingresso - (20%valor_ingresso)
print (desconto)

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - desconto
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
17.5
207.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:46:04) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = int(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - (20%valor_ingresso)
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
205.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:46:24) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = float(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - (20%valor_ingresso)
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
205.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:49) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = float(input("Determine o valor do ingresso: "))


if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - (0.2 * valor_ingresso)
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
217.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:48:46) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = float(input("Determine o valor do ingresso: "))

desconto = 0.2 * valor_ingresso

if mulher.upper() == "S":
	ingresso = (valor_ingresso * quantidade_ingresso) - desconto
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
217.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:49:23) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = float(input("Determine o valor do ingresso: "))

desconto = 0.2 * valor_ingresso

if mulher.upper() == "S":
	ingresso = valor_ingresso - desconto * 3
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:50:24) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = float(input("Determine o valor do ingresso: "))

desconto = 0.2 * valor_ingresso

if mulher.upper() == "S":
	ingresso = (valor_ingresso - desconto) * quantidade_ingresso
else:
	print (valor_ingresso)
	
print(round(ingresso, 2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:50:54) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = float(input("Determine o valor do ingresso: "))

desconto = 0.2 * valor_ingresso

if mulher.upper() == "S":
	ingresso = (valor_ingresso - desconto) * quantidade_ingresso
else:
	ingresso = (valor_ingresso) * quantidade_ingresso 
	
print(round(ingresso, 2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:50:57) 
-- CODE:
mulher = input("E mujlher ou nao e?! ")
valor_ingresso = float(input("Determine o valor do ingresso: "))
quantidade_ingresso = float(input("Determine o valor do ingresso: "))

desconto = 0.2 * valor_ingresso

if mulher.upper() == "S":
	ingresso = (valor_ingresso - desconto) * quantidade_ingresso
else:
	ingresso = (valor_ingresso) * quantidade_ingresso 
	
print(round(ingresso, 2))
-- EXECUTION TIME:
0.156709
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
